[workspace]
members = ["rshtml", "rshtml_core", "rshtml_macro", "rshtml_test"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Mehmet Kesik <mhmtkskx@gmail.com>"]
edition = "2024"

[workspace.dependencies]
rshtml = { path = "rshtml" }
rshtml_macro = { path = "rshtml_macro" }
rshtml_core = { path = "rshtml_core" }