[workspace]
members = ["rshtml", "rshtml_core", "rshtml_macro", "rshtml_test"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Mehmet Kesik <mhmtkskx@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mehmetkesik/rshtml"
description = "RsHtml: A Template Engine for Seamless HTML and Rust Integration."
keywords = ["rshtml", "template", "html_template", "rust", "html"]
categories = ["template-engine", "web-programming", "development-tools", "parser-implementations", "compilers"]

[workspace.dependencies]
rshtml = { path = "rshtml", version = "0.1.0" }
#rshtml_macro = { path = "rshtml_macro", version = "0.1.0" }
#rshtml_core = { path = "rshtml_macro",version = "0.1.0" }

rshtml_macro = { git = "https://github.com/mehmetkesik/rshtml.git", tag = "v0.1.0", version = "0.1.0", branch = "master" }
rshtml_core = { git = "https://github.com/mehmetkesik/rshtml.git", tag = "v0.1.0", version = "0.1.0", branch = "master" }

[patch."https://github.com/mehmetkesik/rshtml.git"]
rshtml_core = { path = "rshtml_core" }
rshtml_macro = { path = "rshtml_macro" }


