[package]
name = "rshtml"
documentation.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
rshtml_macro.workspace = true
rshtml_core.workspace = true