[package]
name = "rshtml"
documentation.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
rshtml_macro.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.41"
toml = "0.8.22"
