[package]
name = "rshtml_core"
version = "0.1.0"
edition = "2024"

[dependencies]
pest = "2.8.0"
pest_derive = "2.8.0"
serde = { version = "1.0.219", features = ["derive"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"
anyhow = "1.0.98"
toml = "0.8.22"
syn = { version = "2.0.101", features = ["full"] }
thiserror = "2.0.12"

[dev-dependencies]
trybuild = "1.0.105"
tempfile = "3.20.0"
chrono = "0.4.41"