[package]
name = "rshtml_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pest = "2.8.0"
pest_derive = "2.8.0"
serde = { version = "1.0.219", features = ["derive"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"
anyhow = "1.0.98"
toml = "0.8.22"
syn = { version = "2.0.101", features = ["full"] }
serde_json = "1.0.140"
chrono = "0.4.41"

[dev-dependencies]
trybuild = "1.0.105"
tempfile = "3.20.0"
chrono = "0.4.41"
