[package]
name = "rshtml_test"
version = "0.3.0"
edition = "2024"
publish = false

[dependencies]
rshtml.workspace = true
chrono = "0.4.41"
syn = "2.0.101"
pest = "2.8.0"
serde = { version = "1.0.219", features = ["derive"] }

[package.metadata.rshtml]
views = { path = "views", extract_file_on_debug = false }

[build-dependencies]
rshtml.workspace = true
